todoyu portal extension changelog

portal 1.4.1 - 2013-12-31
	* Added: Catalan language. Credits to Carles Baiges Camprubí LaCol (www.lacol.org)

portal 1.4.0 - 2013-03-27
	* Require: core 2.3.0
	* Changed: Moved tab counter update methods to core
	* Changed: Made update of filterset counter in filterset list more robust (bound filterset directly to request handler)
	* Bugfix: Empty parameter caused JS-Error on feedback tab

portal 1.3.0 - 2012-05-03
	* Adapted to core 2.2

portal 1.2.0 - 2012-02-22
	* Feature: Filter listing now can include separators
	* Changed: Dependency search 1.3.0
	* Changed: Selecting a filter from the filter widget scrolls to top

portal 1.1.3 - 2011-12-13
	* Bugfix: Show real amount of result when only one filterset is selected
	* Changed: Code cleanup
	* Changed: Support phpUnit 3.6

portal 1.1.2 - 2011-11-17
	* Changed: Portal does not add anymore contextmenu items to deleted tasks
	* Translation: Polish

portal 1.1.1 - 2011-09-15
	* Minor cleanups

portal 1.1.0 - 2011-06-17
	* Feature: Added init-rights-check for controller
	* Changed: Requires core 2.1
	* Changed: Structure for 2.1
	* Changed: All classes are prefixed with extension name