@@ -1,5 +1,8 @@
 todoyu portal extension changelog
 
+portal 1.4.2 - not released yet
+	* Added: Indonesian Language. Credits to Abdush Shomad.
+
 portal 1.4.1 - 2013-12-31
 	* Added: Catalan language. Credits to Carles Baiges Camprubí LaCol (www.lacol.org)
 
